--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="shortcut icon" href="./favicon.ico">
     <title>JavaScript course</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <div class="excel">
+            <div class="excel__header">
+                <input type="text" class="input" value="New table" />
+                <div>
+                    <div class="button">
+                        <i class="material-icons">exit_to_app</i>
+                    </div>
+                    <div class="button">
+                        <i class="material-icons">delete</i>
+                    </div>
+                </div>
+            </div>
+            <div class="excel__toolbar">
+                <div class="button">
+                    <i class="material-icons">format_align_left</i>
+                </div>
+                <div class="button">
+                    <i class="material-icons">format_align_center</i>
+                </div>
+                <div class="button">
+                    <i class="material-icons">format_align_right</i>
+                </div>
+                <div class="button">
+                    <i class="material-icons">format_bold</i>
+                </div>
+                <div class="button">
+                    <i class="material-icons">format_italic</i>
+                </div>
+                <div class="button">
+                    <i class="material-icons">format_underlined</i>
+                </div>
+            </div>
+            <div class="excel__formula">
+                <div class="info">fx</div>
+                <div class="input" contenteditable spellcheck="false"></div>
+            </div>
+            <div class="excel__table"></div>
+        </div>
+    </div>
 </body>
 </html>
